second commit with upgrades

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <p>
-        Hola este es mi primera prueba de 
-        un archivo creado y guardado por ubuntu. 
+        Hola bro este es mi primera prueba de 
+        un archivo creado y guardado por ubuntu. <br>
+        segunda prueba para confirmar buen uso de git hub.
     </p>
 </body>
 </html>
